// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReActor should initialize 1`] = `
<div>
  <span>
    Not initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
</div>
`;

exports[`createReActor should initialize 2`] = `
<div>
  <span>
    Initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
</div>
`;

exports[`createReActor should query 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`createReActor should query 2`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <span>
    0.2.0
  </span>
</div>
`;
